--- a/blogpost.html
+++ b/blogpost.html
@@ -4,11 +4,15 @@
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
-        <h1>
-            Aquí vamos a hacer un post en el cuerpo del blog
-        </h1>
-        <p>
-            Y este es el párrafo de inicio
-        </p>
+        <div id="container">
+            <div id="post">
+                <h1>
+                    Este es el título del post
+                </h1>
+                <p>
+                    Y este es el párrafo, más largo desde luego. Aqui
+                    vamos a explicar las cosas increíbles que se pueden
+                    hacer con ramas.
+                </p>
     </body>
 </html>
