Estructura inicial de la cabecera

--- a/blogpost.html
+++ b/blogpost.html
@@ -5,6 +5,9 @@
     </head>
     <body>
         <div id="container">
+            <div id ="cabecera">
+                Cabecera
+            </div>
             <div id="post">
                 <h1>
                     Este es el título del post
@@ -14,5 +17,7 @@
                     vamos a explicar las cosas increíbles que se pueden
                     hacer con ramas.
                 </p>
+            </div>
+        </div>
     </body>
 </html>
