--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,8 @@
     <body>
         <div id="container">
             <div id ="cabecera">
-                Cabecera
+                Hyperblog
+                <span id="tagline">tu blog de lo que sea </span>
             </div>
             <div id="post">
                 <h1>
