agregué un párrafo al blog en master para probar el merge

--- a/blogpost.html
+++ b/blogpost.html
@@ -14,5 +14,9 @@
                     vamos a explicar las cosas increíbles que se pueden
                     hacer con ramas.
                 </p>
+                <p>
+                    Nuevo parrafo que voy a usar para probar la funcionalidad
+                    del merge
+                </p>
     </body>
 </html>
