agregué suscripción y cambie color --diferente a cabecera

--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,7 @@
         <div id="container">
             <div id ="cabecera">
                 Hyperblog
-                <span id="tagline">tu blog de lo que sea </span>
+                <span id="tagline">tu blog maestro </span>
             </div>
             <div id="post">
                 <h1>
@@ -22,6 +22,9 @@
                     Nuevo parrafo que voy a usar para probar la funcionalidad
                     del merge
                 </p>
+                <p>
+                    suscribete y dale al like
+                </p>>
             </div>
         </div>
     </body>
